Feature: APIs, Models, Authentication

--- a/env.sample
+++ b/env.sample
@@ -1,4 +1,6 @@
-MY_TOWN_API_PRODUCTION_HTTPS_API_URL="https://sale-api.fresco.me"
-MY_TOWN_API_PRODUCTION_HTTP_API_URL="http://sale-api.fresco.me"
+MY_TOWN_API_PRODUCTION_HTTPS_API_URL="https://mytown-api.com"
+MY_TOWN_API_PRODUCTION_HTTP_API_URL="http://mytown-api.com"
 
 MY_TOWN_API_DATABASE_URL=""
+
+TOKEN_SECRET="Zzd814nldl91104qor5911gjald"
