--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@sailshq/lodash": "^3.10.3",
     "@sailshq/socket.io-redis": "^5.2.0",
     "grunt": "1.0.4",
+    "jsonwebtoken": "^8.5.1",
     "sails": "^1.2.3",
     "sails-hook-autoreload": "^1.1.0",
     "sails-hook-grunt": "^4.0.0",
