Feature: Dockerizing the app

--- a/.gitignore
+++ b/.gitignore
@@ -136,7 +136,7 @@ lib-cov
 # Environment variables.
 ################################################
 
-env
+.env
 
 
 ################################################
