--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "a Sails application",
   "keywords": [],
   "dependencies": {
-    "@logisticinfotech/sails-hook-actions2-swagger": "0.0.9",
+    "@msv300/sails-hook-actions2-swagger": "^1.0.1",
     "@sailshq/connect-redis": "^3.2.1",
     "@sailshq/lodash": "^3.10.3",
     "@sailshq/socket.io-redis": "^5.2.0",
