--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@sailshq/socket.io-redis": "^5.2.0",
     "grunt": "1.0.4",
     "jsonwebtoken": "^8.5.1",
+    "knex": "^0.20.1",
     "sails": "^1.2.3",
     "sails-hook-autoreload": "^1.1.0",
     "sails-hook-grunt": "^4.0.0",
