Feature: Adding Location filter to Outlets, Adding Address update and destroy

--- a/.gitignore
+++ b/.gitignore
@@ -144,3 +144,9 @@ lib-cov
 ################################################
 
 swagger.json
+
+################################################
+# Certificate files
+################################################
+
+*.pem
