--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "knex": "^0.20.1",
     "sails": "^1.2.3",
     "sails-hook-autoreload": "^1.1.0",
+    "sails-hook-email": "^0.12.1",
     "sails-hook-grunt": "^4.0.0",
     "sails-hook-organics": "^1.0.0",
     "sails-hook-orm": "^2.1.1",
