Feature: Register devices and notification

--- a/.gitignore
+++ b/.gitignore
@@ -150,3 +150,11 @@ swagger.json
 ################################################
 
 *.pem
+
+################################################
+# Firebase notification config
+################################################
+
+swagger.json
+
+firebase_notification_config.json
