Fix/add image to outlet

--- a/.env.sample
+++ b/.env.sample
@@ -5,7 +5,14 @@ MY_TOWN_API_DATABASE_URL=""
 
 TOKEN_SECRET="Zzd814nldl91104qor5911gjald"
 
-MY_TOWN_API_AWS_S3_KEY="AQDKEW22W2SBAKIAKIA"
-MY_TOWN_API_AWS_S3_SECRET="JvIHXooksJvIqsJvIsX/g5QgsJvIHXoQfsJvIHXoCK"
+MY_TOWN_API_AWS_KEY="AQDKEW22W2SBAKIAKIA"
+MY_TOWN_API_AWS_SECRET="JvIHXooksJvIqsJvIsX/g5QgsJvIHXoQfsJvIHXoCK"
 MY_TOWN_API_AWS_S3_BUCKET="play-mobile-static-assets"
 MY_TOWN_API_AWS_S3_HOST="https://somedomain.net/"
+
+MY_TOWN_API_SES_USERNAME="some_username"
+MY_TOWN_API_SES_PASSWORD="some_password"
+MY_TOWN_API_DEFAULT_FROM_EMAIL="asdf@gmail.com"
+
+MY_TOWN_API_FIREBASE_NOTIFICATION={ "somekey": "value" }
+MY_TOWN_API_FIREBASE_NOTIFICATION_DB_URL="https://something-12wead.firebaseio.com/"
