--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@sailshq/connect-redis": "^3.2.1",
     "@sailshq/lodash": "^3.10.3",
     "@sailshq/socket.io-redis": "^5.2.0",
+    "aws-sdk": "^2.595.0",
     "firebase-admin": "^8.9.0",
     "grunt": "1.0.4",
     "jsonwebtoken": "^8.5.1",
